--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@xstate/react": "^0.8.1",
     "cloudinary-react": "^1.4.0",
+    "framer-motion": "^1.10.3",
     "lodash": "4.0",
     "next": "9.3.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "typeface-montserrat": "^0.0.75",
     "typeface-raleway": "^0.0.75",
-    "typeface-spartan": "^1.1.4"
+    "typeface-spartan": "^1.1.4",
+    "xstate": "^4.8.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
