--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.2.0"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "printWidth": 100,
+    "semi": false
   }
+
 }
