Add HTTPS setting

--- a/now.json
+++ b/now.json
@@ -2,7 +2,8 @@
   "build": {
     "env": {
       "CLOUDINARY_KEY": "@cloudinary_key",
-      "CLOUDINARY_SECRET": "@cloudinary_secret"
+      "CLOUDINARY_SECRET": "@cloudinary_secret",
+      "HTTPS": true
     }
   }
 }
