--- a/now.json
+++ b/now.json
@@ -2,8 +2,7 @@
   "build": {
     "env": {
       "CLOUDINARY_KEY": "@cloudinary_key",
-      "CLOUDINARY_SECRET": "@cloudinary_secret",
-      "HTTPS": true
+      "CLOUDINARY_SECRET": "@cloudinary_secret"
     }
   }
 }
