--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "autoprefixer": "^9.7.6",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "1.3.4"
   },
   "prettier": {
     "trailingComma": "es5",
